Deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecream-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: icecream-api
  template:
    metadata:
      labels:
        app: icecream-api
    spec:
      containers:
      - name: icecream-api
        image: gerardolglz/heladoapi:dev
        ports:
        - containerPort: 80
