Service.yml
apiVersion: v1
kind: Service
metadata:
  name: icecream-api
spec:
  selector:
    app: icecream-api
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
