ServiceDb.yml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
  type: LoadBalancer
